# clayg

./: .gitignore  CMakeLists.txt  ClAYGDecoder.cpp  ClAYGDecoder.h  Cluster.cpp  Cluster.h  Decoder.cpp  Decoder.h  DecodingGraph.cpp  DecodingGraph.h  Logger.cpp  Logger.h  PeelingDecoder.cpp  PeelingDecoder.h  UnionFindDecoder.cpp  UnionFindDecoder.h  data_generator.py  decoding_graph_renderer.py  main.cpp  plots.ipynb
include/: ClAYGDecoder.h  Cluster.h  Decoder.h  DecodingGraph.h  Logger.h  LogicalComputer.h  ParsingUtils.h  PeelingDecoder.h  UnionFindDecoder.h
src/: ClAYGDecoder.cpp  Cluster.cpp  DecodingGraph.cpp  Logger.cpp  LogicalComputer.cpp  ParsingUtils.cpp  PeelingDecoder.cpp  UnionFindDecoder.cpp  main.cpp
tools/: decoding_graph_renderer.py  diagram_data_generator.cpp  dispatcher.py  example_run.txt  param_generator.py  params.txt  plots.ipynb  quantum-plots.ipynb  submit_clayg_array_job.sh
